tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__TameanOcelottoGe-AAAAAAAAAAAAAAAAAAAJKg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2346,
  "prerequisites": [
    493
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Once you have the required materials, you will need to find an ocelot to tame.\n\nOcelots can be found in Jungle Biomes.\n\nIf you are having trouble finding an ocelot, you can always summon an ocelot using a spawn egg.\n\nYou can tame an ocelot by giving it a raw fish. So add the raw fish to your inventory and select the raw fish in your hotbar.\n\nJust like vanilla Minecraft, a tamed ocelot turns into a cat. The cat will repel creepers.\n\n§3TIP: Make sure you are in a large space when trying to tame the ocelot so that the ocelot has lots of room to move. If you are in a space that is too small, you will not be able to tame the ocelot.\n\nNext, while holding the raw fish, do not move. If you move, you will scare away the ocelot. If you are very still, the ocelot will eventually notice the fish in your hand and begin to walk over to you.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lTame an Ocelot to Get a Friend",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    493
  ],
  "rewards": [],
  "tasks": []
}
