tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__TheHellisThat-AAAAAAAAAAAAAAAAAAAAMQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 49,
  "prerequisites": [
    493
  ],
  "properties": {
    "auto_claim": false,
    "desc": "In order to get more machines, you'll need pistons. But not those amateurish ones, you need special ones, and I shall guide you in the making of them.\n\n§3PS: Infernals can drop them, though you won't get credit for the quest that way.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 1,
    "name": "§3§lThe Hell is That?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    493
  ],
  "rewards": [],
  "tasks": []
}
