tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__TheIronGuy-AAAAAAAAAAAAAAAAAAAEUw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1107,
  "prerequisites": [
    54
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Do you feel lonely? Need some extra protection in your base? Want to keep the pigmen off your back in the Nether? Craft some Iron Golems and the monster problem inside your base will be gone.\n\nThey can do good amounts of damage and aggro enemies like the pigmen away from you. They can even take care of that pesky Vampire Pigman.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lThe Iron Guy",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    54
  ],
  "rewards": [],
  "tasks": []
}
