tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__ToolForge-AAAAAAAAAAAAAAAAAAAC5Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 741,
  "prerequisites": [
    1126
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After getting obzinite, it's time to craft a tool forge for making bigger (and better) Tinkers tools.\n\n§3You do not have to use iron to create the forge; you can also use other materials like tin or copper, among others.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lTool Forge",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1126
  ],
  "rewards": [],
  "tasks": []
}
